--- a/index.html
+++ b/index.html
@@ -784,10 +784,10 @@
                 <strong>Software</strong>
                 <ul>
                   <li>Windows & Linux</li>
-                  <li>Vusual Stodio</li>
+                  <li>Visual Stodio</li>
                   <li>SQL Server Management Studio</li>
                   <li>Git</li>
-                  <li>Vusual Stodio Code(
+                  <li>Visual Stodio Code(
                     <strong>Most favorite</strong> )</li>
                   <li>Resharper</li>
                 </ul>
